@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.releaseBB" version="1.5.0" name="Release[COLOR orange][B]BB[/B][/COLOR]" provider-name="Bugatsinho">
+<addon id="plugin.video.releaseBB" version="1.5.1" name="Release[COLOR orange][B]BB[/B][/COLOR]" provider-name="Bugatsinho">
   <requires>
     <import addon="xbmc.python" version="2.1.0"/>
     <import addon="script.module.t0mm0.common" version="2.1.1"/>
@@ -18,11 +18,8 @@
     <website>https://bugatsinho.github.io/</website>
     <twitter>https://twitter.com/bugatsinho</twitter>
     <repo>https://bugatsinho.github.io/repo/</repo>
-    <news>+ [B][COLOR lime]1.5.0[/B][/COLOR] [COLOR gold](21-12-2018)[/COLOR]
-- rewrite View-Mode function
-  (now you can use the context menu
-   and set the viewtype you prefer by
-   select Set View as Default)</news>
+    <news>+ [B][COLOR lime]1.5.1[/B][/COLOR] [COLOR gold](03-01-2019)[/COLOR]
+- fix search url</news>
     <assets>
         <icon>icon.png</icon>
         <fanart>fanart.jpg</fanart>
