@@ -1,3 +1,6 @@
++ [B][COLOR lime]1.5.1[/B][/COLOR] [COLOR gold](03-01-2019)[/COLOR]
+- fix search url
+
 + [B][COLOR lime]1.5.0[/B][/COLOR] [COLOR gold](21-12-2018)[/COLOR]
 - rewrite View-Mode function
   (now you can use the context menu
